2007-12-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Make libtool respect the -s switch of make
	and be quiet.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	(clutter_actor_get_sizeu),
	(clutter_actor_get_positionu): Add unit-based accessors to
	the size and position.

2007-12-07  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_set_angle_start):
	(clutter_behaviour_ellipse_set_angle_end):
	(clutter_behaviour_ellipse_set_angle_tilt):
	(clutter_behaviour_ellipse_set_tilt):
	Removed strayed degree -> ClutterAngle conversions left over from
	API changes.

	(clutter_behaviour_ellipse_set_angle_tiltx):
	Removed stray printf.

2007-12-07  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c:
	Fixed tilt setters and getters.

2007-12-06  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.c:
	* clutter/clutter-fixed.h:
	(clutter_sqrti):
	Added extra iteration to the Newton-Rapson algorithm for arguments
	lesser than 342 to improve precission.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c:
	(clutter_set_motion_events_frequency): Never allow the motion
	events devlivery frequency to exceed the default frame rate.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-parser.[ch]: Use gssize, size we allow -1
	as a length (meaning "use the whole string").

	(json_parser_load_from_data): Use the passed length instead of
	using strlen() all the time.

	* clutter/clutter-script.[ch]: Ditto as above.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/pango/pangoclutter-render.c: Hush a compiler warning
	by removing a unused variable.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c (clutter_label_ensure_layout): If the
	label has a requested size, force it when ensuring the layout.
